feat(layout,adapter):添加了checkbox